# ECE4301_Fall2024

./: .gitmodules  LICENSE  README.md
group B/: cryptostream.py
group C/Aidan Ancheta/: Midterm 1 Submission
group C/Final Project/: Benchmarking Lightweight Cryptographic Primitives on MicroBlaze.pptx  ECE4301 Data.xlsx  ECE4301_mb.xpr  TinyJAMBU.c  Xoodyak_test.c  lscript.ld  main_w_ddr2.c
group C/Michael Rosales/Midterm 2/: Cargo.toml  Video Demo Link  main.rs  pi_encryption.rs
group D/Benjamin Black/: Video
group D/final project/: ECE 4301 Final Presentation.pptx  server_code.py
group E/: readme
group E/Antonuos Kerollos/: Quiz1
group E/Dawson Graf/: Midterm 1 video link
group E/Final Code/: client.rs  main.rs
group E/Jared Alanis/: Midterm YouTube Link  Quiz1 YouTube Link  Quiz2 YouTube link  Quiz2 cargo.toml
group G/Final Project/: Laptop_Code.py  Pi_5_code.py
group G/Hyung Jin Kim/: Midterm2.txt
group G/Ignacio Velasco/: Midterm 1 Video Link
group G/Nourine_mahmoud/: midterm_1
group G/Sophia Yu/: chacha20_en.py
group h/: Linh Lam
group h/Final Project/: Abstarct  README.md  index.html  server.py
group h/Linh Lam/: Midterm #2 Demo  Midterm#1 Demo
group h/Nhat Hoang Ha/: Midterm 1 link  Quiz 2
group h/Ricardo Godinez/: diffie_hellman_host.py  diffie_hellman_pi.py  private_key.pem  public_key.pem  rsa_key_gen.py  video_link.txt  video_sender.py
group_A/: midterm_rpi.py  midterm_win.py  requirements.txt  rpi_config.py  win_config.py
group_A/Final Project/: README.md  crypto_proj.py  peer_public_key.pem  private_key.pem  (+3 more)
(+244 files in other folders)
